35787 Allow Project to have a parent Added projectParent to project + validator